fixing alignment links homepage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ html,body {
 }
 
 .first {
-  padding-top:160px;
+  padding-top:220px;
   height: 100VH;
   width: 100%;
   min-height:400px;
